feat: app store links - added app store links to home page - added mission statement to home page - added link to main website in navbar

--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -51,3 +51,13 @@
     text-shadow: 0px 2px 4px rgb(0, 0, 0);
     color: var(--ifm-color-gray-100);
 }
+
+.download {
+    display: flex;
+    flex-flow: row;
+    gap: 0.5rem;
+}
+
+.download img {
+    height: 2rem;
+}
